--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     </head>
     <body>
         <img src="res/intro.png" class="intro">
-        <img src="res/top paper.png" class="top paper">
-        <img src="res/polaroid.png" class="polaroid a">
-        <img src="res/polaroid.png" class="polaroid b">
-        <img src="res/polaroid.png" class="polaroid c">
+        <img src="res/top paper.png" class="top">
+        <img src="res/bottom paper.png" class="bottom">
     </body>
 </html>
