--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <img src="res/top paper.png" class="top">
         <img src="res/bottom paper.png" class="bottom">
         <img src="res/polaroid group.png" class="polaroid">
+        <img src="res/polaroid group.png" class="dup">
         <img src="res/Happy.png" class="happy">
         <img src="res/Birthday.png" class="birthday">
     </body>
