working on new page

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     </head>
     <body>
         <img src="res/top paper.png" class="top">
-        <img src="res/bottom paper.png" class="bottom">
+        <div class="container">
+            <img src="res/bottom paper.png" class="bottom">
+            <a href="file.html" class="butt">Go to next page</a>
+        </div>
         <img src="res/polaroid group.png" class="polaroid">
-            <button>button</button>
-        </img>
         <img src="res/polaroid group.png" class="dup">
         <img src="res/Happy.png" class="happy">
         <img src="res/Birthday.png" class="birthday">
