--- a/file.html
+++ b/file.html
@@ -1,19 +1,11 @@
 <html>
-    <head>  
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="icon" href="res/icon.jpg" type="image/x-icon">
-        <link rel="stylesheet" href="main.css" type="text/css">
-        <title>My Webpage</title>
+    <head>
+        <link rel="stylesheet" href="file.css" type="text/css">
     </head>
-<body>
-    <ul>
-        <li><a href="about.html" class="active">About</a></li>
-        <li><a>About</a></li>
-    </ul>
-    <h1>Hello Webpage</h1>
-    <hr>
-    <p>This is my webpage</p>
-    <p><a href="about.html">Click here to to about site!</a></p>
-</body>
+    <body>
+        <div class="container">
+            <img src="res/envelope.png">
+            <img src="res/envelope.png">
+        </div>
+    </body>
 </html>
