pseudo finished new page

--- a/file.html
+++ b/file.html
@@ -1,11 +1,26 @@
 <html>
     <head>
         <link rel="stylesheet" href="file.css" type="text/css">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="container">
-            <img src="res/envelope.png">
-            <img src="res/envelope.png">
+            <div class="img-container">
+                <img src="res/envelope.png" class="item">
+                <button>When you miss me</button>
+            </div>
+            <div class="img-container">
+                <img src="res/envelope.png" class="item">
+                <button>When you feel sad</button>
+            </div>
+            <div class="img-container">
+                <img src="res/envelope.png" class="item">
+                <button>When you feel lonely</button>
+            </div>
+            <div class="img-container">
+                <img src="res/envelope.png" class="item">
+                <button>When you feel tired</button>
+            </div>
         </div>
     </body>
 </html>
