started new letter

--- a/file.html
+++ b/file.html
@@ -4,10 +4,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     </head>
     <body>
-        <button>asdfadf</button>
         <div class="container">
             <div class="img-container">
-                <img src="res/envelope.png" class="item">
+                <a href="letters/Reasons.html">
+                    <img src="res/envelope.png" class="item">
+                </a>
                 <button>When you miss me...</button>
             </div>
             <div class="img-container">
