--- a/letters/Reasons.html
+++ b/letters/Reasons.html
@@ -9,7 +9,7 @@
         <h1>
             <center>
                 <span class="number">18  </span> 
-                <i>Reasons I Love You...</i>
+                <i>Reasons Why I Love You...</i>
             </center>
         </h1>
     </body>
