--- a/letters/Reasons.html
+++ b/letters/Reasons.html
@@ -13,15 +13,42 @@
             </center>
         </h1>
         <div class="reasons-container">
-            <h2>01</h1>
-            <h2>02</h1>
-            <h2>03</h1>
-            <h2>04</h1>
-            <h2>05</h1>
-            <h2>06</h1>
-            <h2>07</h1>
-            <h2>08</h1>
-            <h2>09</h1>
+            <div class="reasons">
+                <h2>01.</h2>
+                <p>lorem ipsum dolor</p>
+            </div>
+            <div class="reasons">
+                <h2>02.</h2>
+                <p>lorem ipasdffdafdadfsum dolor</p>
+            </div>
+            <div class="reasons">
+                <h2>03.</h2>
+                <p>lorem ipsum dolor</p>
+            </div>
+            <div class="reasons">
+                <h2>04.</h2>
+                <p>lorem ipsum dolor</p>
+            </div>
+            <div class="reasons">
+                <h2>05.</h2>
+                <p>lorem ipsum dolor</p>
+            </div>
+            <div class="reasons">
+                <h2>06.</h2>
+                <p>lorem ipsum dolor</p>
+            </div>
+            <div class="reasons">
+                <h2>07.</h2>
+                <p>lorem ipsum dolor</p>
+            </div>
+            <div class="reasons">
+                <h2>08.</h2>
+                <p>lorem ipsum dolor</p>
+            </div>
+            <div class="reasons">
+                <h2>09.</h2>
+                <p>lorem ipsum dolor</p>
+            </div>
         </div>
     </body>
 </html>
