--- a/file.html
+++ b/file.html
@@ -12,7 +12,9 @@
                 <button>When you miss me...</button>
             </div>
             <div class="img-container">
-                <img src="res/envelope.png" class="item">
+                <a href="letters/Heart-Collage.html">
+                    <img src="res/envelope.png" class="item">
+                </a>
                 <button>When you feel sad...</button>
             </div>
             <div class="img-container">
