--- a/letters/Reasons-2.html
+++ b/letters/Reasons-2.html
@@ -9,36 +9,42 @@
         <div class="reasons-container">
             <div class="reasons">
                 <h2>08.</h2>
-                <p>lorem ipsum dolor</p>
+                <p>For being mine</p>
             </div>
             <div class="photo">
             </div>
             <div class="reasons">
                 <h2>09.</h2>
-                <p>lorem ipsum dolor</p>
+                <p>For making me feel<br>
+                    special</p>
             </div>
             <div class="reasons">
                 <h2>10.</h2>
-                <p>lorem ipsum dolor</p>
+                <p>For supporting me<br>
+                    when no one does</p>
             </div>
             <div class="reasons">
                 <h2>11.</h2>
-                <p>lorem ipsum dolor</p>
+                <p>For loving me back to handsome<br>
+                    even when I am feeling ugly</p>
             </div>
             <div class="reasons">
                 <h2>12.</h2>
-                <p>lorem ipsum dolor</p>
+                <p>For loving me even<br>
+                    in our hardest days</p>
             </div>
             <div class="reasons">
                 <h2>13.</h2>
-                <p>lorem ipsum dolor</p>
+                <p>The way you make my terrible<br>
+                    day amazing by being there<br>
+                    for me</p>
             </div>
             <div class="reasons">
                 <h2>14.</h2>
-                <p>lorem ipsum dolor</p>
+                <p>The way you hold my hand</p>
             </div>
         </div>
-        <a href="Reasons-2.html">
+        <a href="Reasons-3.html">
             <button>&rarr;</button>
         </a>
     </body>
