--- a/letters/Reasons.html
+++ b/letters/Reasons.html
@@ -15,33 +15,34 @@
         <div class="reasons-container">
             <div class="reasons">
                 <h2>01.</h2>
-                <p>lorem ipsum dolor</p>
+                <p>Your presence</p>
             </div>
             <div class="photo">
             </div>
             <div class="reasons">
                 <h2>02.</h2>
-                <p>lorem ipsum dolor</p>
+                <p>Your heartbeats</p>
             </div>
             <div class="reasons">
                 <h2>03.</h2>
-                <p>lorem ipsum dolor</p>
+                <p>Your smile and laugh</p>
             </div>
             <div class="reasons">
                 <h2>04.</h2>
-                <p>lorem ipsum dolor</p>
+                <p>Your amazing voice</p>
             </div>
             <div class="reasons">
                 <h2>05.</h2>
-                <p>lorem ipsum dolor</p>
+                <p>Your eyes</p>
             </div>
             <div class="reasons">
                 <h2>06.</h2>
-                <p>lorem ipsum dolor</p>
+                <p>your touch</p>
             </div>
             <div class="reasons">
                 <h2>07.</h2>
-                <p>lorem ipsum dolor</p>
+                <p>Hearing your name<br>
+                makes me smile</p>
             </div>
         </div>
         <a href="Reasons-2.html">
