a few changes to reason then it is done i am pretty sure

--- a/letters/Reasons-2.html
+++ b/letters/Reasons-2.html
@@ -25,8 +25,9 @@
             </div>
             <div class="reasons">
                 <h2>11.</h2>
-                <p>For loving me back to handsome<br>
-                    even when I am feeling ugly</p>
+                <p>For loving me back to<br>
+                handsome even when I<br> 
+                am feeling ugly</p>
             </div>
             <div class="reasons">
                 <h2>12.</h2>
@@ -35,9 +36,10 @@
             </div>
             <div class="reasons">
                 <h2>13.</h2>
-                <p>The way you make my terrible<br>
-                    day amazing by being there<br>
-                    for me</p>
+                <p>The way you make my <br>
+                terrible day amazing <br>
+                by being there for me<br>
+                </p>
             </div>
             <div class="reasons">
                 <h2>14.</h2>
