--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
         <img src="res/top paper.png" class="top">
         <div class="container">
             <img src="res/bottom paper.png" class="bottom">
-            <a href="file.html" class="butt">Go to next page</a>
+            <a href="file.html" class="butt">&rarr;</a>
         </div>
         <img src="res/polaroid group.png" class="polaroid">
-        <img src="res/polaroid group.png" class="dup">
         <img src="res/Happy.png" class="happy">
         <img src="res/Birthday.png" class="birthday">
     </body>
