--- a/letters/Heart-Collage.html
+++ b/letters/Heart-Collage.html
@@ -6,5 +6,6 @@
     <body>
             <img src="res/Heart-Collage.png"></img>
             <h1>Every picture is a moment I'd choose you again</h1>
+            <a href="file.html" class="butt">&rarr;</a>
     </body>
 </html>
