--- a/letters/Supportive.html
+++ b/letters/Supportive.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="Supportive.css" type="text/css">
     </head>
     <body>
+        <img src="res/letter-2.png" class="bg">
         <a href="../file.html" class="butt">&rarr;</a>
     </body>
 </html>
