--- a/file.html
+++ b/file.html
@@ -30,7 +30,9 @@
                 <button>When you feel tired...</button>
             </div>
             <div class="img-container">
-                <img src="res/envelope.png" class="item">
+                <a href="letters/Since.html">
+                    <img src="res/envelope.png" class="item">
+                </a>
                 <button>When you feel lonely...</button>
             </div>
             <div class="img-container">
